Album artwork loading and CSS started

--- a/stax-on-stax-frontend/src/App.css
+++ b/stax-on-stax-frontend/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/* NAV BAR */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
+  padding: 10px 0px;
+  background-color: #d6d6d6;
+  border-bottom: 4px solid black;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a {
+  background-color: white;
+  font-size: 25px;
+  text-decoration: none;
+  padding: 7px;
+  border: 2px solid;
+  border-radius: 10px;
+  font-family: 'PT Sans Narrow', sans-serif;
 }
