--- a/stax-on-stax-frontend/src/App.css
+++ b/stax-on-stax-frontend/src/App.css
@@ -5,9 +5,10 @@ h1 {
   text-align: center;
   margin-top: 0px;
   margin-bottom: 0px;
-  padding-bottom: 2px;
+  padding-bottom: 7px;
   font-size: 40px;
   background-color: #18c6d6;
+  width: 100%;
 }
 
 /* NAV BAR */
@@ -69,6 +70,7 @@ th {
 .containerImage {
   height: 100px;
   margin-top: 5px;
+  border: 1px solid black;
 }
 
 td {
@@ -76,6 +78,7 @@ td {
   border: 3px solid black;
   font-size: 30px;
   font-family: 'PT Sans Narrow', sans-serif;
+  cursor: pointer;
 }
 
 tr:nth-child(even) {
@@ -89,4 +92,124 @@ tr:hover {
 .upDown {
   background-color: transparent;
   border: none;
+}
+
+/* SHOW RECORD */
+
+.showImg {
+  height: 500px;
+  border: 2px solid black;
+  margin: 10px;
+}
+
+.showDiv {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.showRow {
+  display: flex;
+  width: 700px;
+  justify-content: space-between;
+  padding: 5px;
+  font-family: 'PT Sans Narrow', sans-serif;
+  font-size: 30px;
+  border: 2px solid black;
+  border-bottom: none;
+}
+
+.odd {
+  background-color: #dcdee0;
+}
+
+.last {
+  border-bottom: 2px solid black;
+}
+
+.showBtn {
+  font-size: 30px;
+  margin-top: 10px;
+  border: 2px solid black;
+  font-family: 'PT Sans Narrow', sans-serif;
+  padding: 12px;
+  border-radius: 15px;
+  background-color: #18c6d6;
+  cursor: pointer;
+}
+
+.showBtn:hover {
+  background-color: #afb0b3;
+}
+
+.showBtnDiv {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  margin-bottom: 30px;
+  margin-top: 20px;
+}
+
+/* FORMS */
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin-top: 15px;
+  font-family: 'PT Sans Narrow', sans-serif;
+  font-size: 35px;
+}
+
+input {
+  font-size: 20px;
+  height: 40px;
+  border: 2px solid black;
+}
+
+.formBtn {
+  font-size: 30px;
+  background-color: #afb0b3;
+  height: 60px;
+  padding: 10px;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.formBtn:hover {
+  background-color: #18c6d6;
+}
+
+#addForm, #editForm {
+  height: 400px;
+  flex-wrap: wrap;
+}
+
+.addBtnDiv {
+  display: flex;
+  justify-content: center;
+}
+
+.editBtnDiv {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+/* ALL USERS */
+
+#allUsersDiv {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h2 {
+  font-size: 40px;
+  font-family: 'Fredoka One', cursive;
+  margin: 10px;
+}
+
+h2:hover {
+  cursor: pointer;
 }
